--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
+    "react-native": "^0.72.7",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
