--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -12,7 +13,7 @@
     "antd": "^5.11.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
-    "fortawesome": "^0.0.1-security",
+    "fortawesome": "0.0.1-security",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.6.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "testing-library": "0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.3.3"
   }
 }
